--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,7 +19,7 @@
     "build:sandbox": "webpack --config webpack.sandbox.js",
     "build:staging": "webpack --config webpack.staging.js",
     "build:data-import": "webpack --config webpack.data-import.js",
-    "build:data-import-persecutio": "webpack --config webpack.data-import.js"
+    "build:data-import-persecutio": "webpack --config webpack.data-import-persecutio.js"
   },
   "author": "",
   "license": "ISC",
